--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "eslint-plugin-svelte": "^3.10.1",
     "eventemitter3": "^5.0.1",
+    "fuse.js": "^7.1.0",
     "ky": "^1.8.1",
     "lucide-svelte": "^0.525.0",
     "stanza": "^12.21.0",
