--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -33,6 +33,7 @@ tauri-plugin-websocket = "2"
 sys-locale = "0.3.2"
 tokio = "1.46.1"
 fs2 = "0.4.3"
+shlex = "1.3.0"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
