--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,23 +18,24 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = ["tray-icon", "devtools"] }
+tauri = { version = "2", features = ["devtools"] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-fs = "2"
 tauri-plugin-http = "2"
-tauri-plugin-shell = "2"
 tauri-plugin-clipboard-manager = "2"
 tauri-plugin-os = "2"
 tauri-plugin-notification = "2"
-sysinfo = "0.34"
 tauri-plugin-websocket = "2"
 sys-locale = "0.3.2"
-tokio = "1.46.1"
-fs2 = "0.4.3"
-shlex = "1.3.0"
 tauri-plugin-prevent-default = "2.1"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri = { version = "2", features = ["tray-icon", "devtools"] }
 tauri-plugin-single-instance = "2"
+tauri-plugin-shell = "2"
+sysinfo = "0.34"
+tokio = "1.46.1"
+fs2 = "0.4.3"
+shlex = "1.3.0"
