--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
+    "@eslint/js": "^9.32.0",
     "@inlang/cli": "^3.0.12",
     "@inlang/paraglide-js": "2.2.0",
     "@stylistic/eslint-plugin": "^5.2.2",
@@ -36,6 +37,7 @@
     "eslint-plugin-svelte": "^3.11.0",
     "eventemitter3": "^5.0.1",
     "fuse.js": "^7.1.0",
+    "globals": "^16.3.0",
     "ky": "^1.8.2",
     "lucide-svelte": "^0.532.0",
     "stanza": "^12.21.0",
