Add Discord RPC support

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.8.0",
+    "@tauri-apps/api": "^2.9.0",
     "@tauri-apps/plugin-clipboard-manager": "^2.3.0",
     "@tauri-apps/plugin-fs": "^2.4.2",
     "@tauri-apps/plugin-http": "^2.5.2",
@@ -21,36 +21,36 @@
   },
   "devDependencies": {
     "@eslint/compat": "^1.4.0",
-    "@eslint/js": "^9.37.0",
+    "@eslint/js": "^9.38.0",
     "@inlang/cli": "^3.0.12",
     "@inlang/paraglide-js": "2.4.0",
-    "@lucide/svelte": "^0.545.0",
-    "@stylistic/eslint-plugin": "^5.4.0",
+    "@lucide/svelte": "^0.546.0",
+    "@stylistic/eslint-plugin": "^5.5.0",
     "@sveltejs/adapter-static": "^3.0.10",
-    "@sveltejs/kit": "^2.46.4",
+    "@sveltejs/kit": "^2.47.2",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tailwindcss/typography": "^0.5.19",
-    "@tailwindcss/vite": "^4.1.14",
-    "@tauri-apps/cli": "^2.8.4",
-    "bits-ui": "2.11.4",
+    "@tailwindcss/vite": "^4.1.15",
+    "@tauri-apps/cli": "^2.9.0",
+    "bits-ui": "2.14.0",
     "clsx": "^2.1.1",
-    "eslint": "^9.37.0",
-    "eslint-plugin-svelte": "^3.12.4",
+    "eslint": "^9.38.0",
+    "eslint-plugin-svelte": "^3.12.5",
     "eventemitter3": "^5.0.1",
     "fuse.js": "^7.1.0",
     "globals": "^16.4.0",
-    "ky": "^1.11.0",
+    "ky": "^1.12.0",
     "stanza": "^12.21.0",
-    "svelte": "5.39.11",
+    "svelte": "^5.41.1",
     "svelte-check": "^4.3.3",
     "svelte-sonner": "^1.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "^4.1.15",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.0",
-    "vite": "^7.1.9",
+    "typescript-eslint": "^8.46.2",
+    "vite": "^7.1.11",
     "zod": "^4.1.12"
   },
   "pnpm": {
