--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "lint": "eslint"
+    "lint": "eslint",
+    "format": "eslint --fix"
   },
   "dependencies": {
     "@tauri-apps/api": "^2.9.0",
